modules/gdscript/tests/scripts/analyzer/errors/variable_overloads_superclass_static_function.gd
# GH-117912

class A:
	static func overload_me() -> void:
		pass

class B extends A:
	var overload_me

func test():
	pass
